--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,7 @@
 ---
 name: Lint
 
+# yamllint disable-line rule:truthy
 on: [push]
 
 jobs:
@@ -15,3 +16,14 @@ jobs:
         uses: ludeeus/action-shellcheck@1.0.0
         with:
           scandir: './one-shots'
+  yaml:
+    name: YAMLlint
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 1
+      - name: Lint YAML
+        uses: ibiqlik/action-yamllint@v3.0.0
+        with:
+          strict: true
