--- a/renovate.json
+++ b/renovate.json
@@ -22,6 +22,10 @@
     {
       "matchPackageNames": ["ghcr.io/linuxserver/jackett"],
       "versionScheme": "regex:version-v(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
+    },
+    {
+      "matchPackageNames": ["ghcr.io/linuxserver/heimdall"],
+      "versionScheme": "regex:version-(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     }
   ]
 }
