jackett and heimdall don't need shared group

--- a/roles/heimdall/tasks/main.yml
+++ b/roles/heimdall/tasks/main.yml
@@ -8,7 +8,7 @@
   ansible.builtin.user:
     name: heimdall
     uid: "{{ arr_users['heimdall'].uid }}"
-    groups: heimdall,{{ arr_group.name }}
+    groups: heimdall
 
 - name: Start Heimdall container
   community.docker.docker_container:
