Add lidarr role

--- a/group_vars/all/common.yml
+++ b/group_vars/all/common.yml
@@ -8,5 +8,8 @@ arr_group:
 arr_users:
   jackett: {uid: 710, gid: 710}
   heimdall: {uid: 711, gid: 711}
+  lidarr: {uid: 712, gid: 712}
 
 container_config_folder: /var/lib/containers
+media_path: /cintra/media
+downloads_path: /cintra/downloads
