--- a/renovate.json
+++ b/renovate.json
@@ -27,6 +27,11 @@
     {
       "matchPackageNames": ["ghcr.io/linuxserver/heimdall"],
       "versionScheme": "regex:version-(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
+    },
+    {
+      "matchPackageNames": ["ghcr.io/linuxserver/lidarr"],
+      "allowedVersions": "<=0.7",
+      "versionScheme": "regex:version-0.(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     }
   ]
 }
