--- a/renovate.json
+++ b/renovate.json
@@ -29,6 +29,10 @@
       "versionScheme": "regex:version-(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
+      "matchPackageNames": ["ghcr.io/linuxserver/plex"],
+      "versioning": "loose"
+    },
+    {
       "matchPackageNames": ["ghcr.io/linuxserver/lidarr"],
       "allowedVersions": "<=0.7",
       "versionScheme": "regex:version-0.(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
