Add plex role to server playbook

--- a/playbooks/server.yml
+++ b/playbooks/server.yml
@@ -10,3 +10,4 @@
     - {role: jackett, tags: ['arr']}
     - {role: heimdall, tags: ['arr']}
     - {role: lidarr, tags: ['arr']}
+    - {role: plex, tags: ['arr']}
