Add radarr role

--- a/group_vars/all/common.yml
+++ b/group_vars/all/common.yml
@@ -10,6 +10,7 @@ arr_users:
   heimdall: {uid: 711, gid: 711}
   lidarr: {uid: 712, gid: 712}
   plex: {uid: 713, gid: 713}
+  radarr: {uid: 714, gid: 714}
 
 container_config_folder: /var/lib/containers
 media_path: /cintra/media
