--- a/renovate.json
+++ b/renovate.json
@@ -25,6 +25,10 @@
       "versionScheme": "regex:version-v(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
+      "matchPackageNames": ["ghcr.io/linuxserver/radarr"],
+      "versionScheme": "regex:version-(?<major>\\d+).0.(?<minor>\\d+).(?<patch>\\d+)?$"
+    },
+    {
       "matchPackageNames": ["ghcr.io/linuxserver/heimdall"],
       "versionScheme": "regex:version-(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
