--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,10 @@
       "versionScheme": "regex:version-v(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
-      "matchPackageNames": ["ghcr.io/linuxserver/radarr"],
+      "matchPackageNames": [
+        "ghcr.io/linuxserver/radarr",
+        "ghcr.io/linuxserver/sonarr"
+      ],
       "versionScheme": "regex:version-(?<major>\\d+).0.(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
