--- a/group_vars/all/common.yml
+++ b/group_vars/all/common.yml
@@ -12,6 +12,7 @@ arr_users:
   plex: {uid: 713, gid: 713}
   radarr: {uid: 714, gid: 714}
   sonarr: {uid: 715, gid: 715}
+  tautulli: {uid: 716, gid: 716}
 
 container_config_folder: /var/lib/containers
 media_path: /cintra/media
