--- a/playbooks/server.yml
+++ b/playbooks/server.yml
@@ -13,3 +13,4 @@
     - {role: plex, tags: ['arr']}
     - {role: radarr, tags: ['arr']}
     - {role: sonarr, tags: ['arr']}
+    - {role: tautulli, tags: ['arr']}
