--- a/group_vars/all/common.yml
+++ b/group_vars/all/common.yml
@@ -13,6 +13,7 @@ arr_users:
   radarr: {uid: 714, gid: 714}
   sonarr: {uid: 715, gid: 715}
   tautulli: {uid: 716, gid: 716}
+  portainer: {uid: 717, gid: 717}
 
 container_config_folder: /var/lib/containers
 media_path: /cintra/media
