--- a/playbooks/server.yml
+++ b/playbooks/server.yml
@@ -14,3 +14,4 @@
     - {role: radarr, tags: ['arr']}
     - {role: sonarr, tags: ['arr']}
     - {role: tautulli, tags: ['arr']}
+    - {role: portainer, tags: ['arr']}
