--- a/renovate.json
+++ b/renovate.json
@@ -25,18 +25,18 @@
         "ghcr.io/linuxserver/jackett",
         "ghcr.io/linuxserver/tautulli"
       ],
-      "versionScheme": "regex:version-v(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
+      "versionScheme": "regex:^version-v(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
       "matchPackageNames": [
         "ghcr.io/linuxserver/radarr",
         "ghcr.io/linuxserver/sonarr"
       ],
-      "versionScheme": "regex:version-(?<major>\\d+).0.(?<minor>\\d+).(?<patch>\\d+)?$"
+      "versionScheme": "regex:^version-(?<major>\\d+).0.(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
       "matchPackageNames": ["ghcr.io/linuxserver/heimdall"],
-      "versionScheme": "regex:version-(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
+      "versionScheme": "regex:^version-(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
       "matchPackageNames": ["ghcr.io/linuxserver/plex"],
@@ -45,7 +45,7 @@
     {
       "matchPackageNames": ["ghcr.io/linuxserver/lidarr"],
       "allowedVersions": "<=0.7",
-      "versionScheme": "regex:version-0.(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
+      "versionScheme": "regex:^version-0.(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     }
   ]
 }
