Init Ansible vault

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ remote_tmp = $HOME/.ansible/tmp
 remote_user = ansible
 nocows = 1
 roles_path = roles
+vault_password_file = .vault-password
 retry_files_enabled = False
 
 [ssh_connection]
