--- a/playbooks/server.yml
+++ b/playbooks/server.yml
@@ -15,3 +15,4 @@
     - {role: sonarr, tags: ['arr']}
     - {role: tautulli, tags: ['arr']}
     - {role: portainer, tags: ['arr']}
+    - {role: transmission, tags: ['arr']}
