--- a/roles/lidarr/tasks/main.yml
+++ b/roles/lidarr/tasks/main.yml
@@ -26,7 +26,7 @@
       traefik.http.routers.lidarr.rule: Host(`lidarr.{{ inventory_hostname }}`)
     env:
       PUID: "{{ arr_users['lidarr'].uid }}"
-      PGID: "{{ arr_users['lidarr'].gid }}"
+      PGID: "{{ arr_group.gid }}"
       TZ: "Europe/London"
       UMASK: "022"
     container_default_behavior: no_defaults
