--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -36,9 +36,12 @@
     owner: jonny
     group: jonny
 
-- name: Add local ZSH config
+- name: Copy configs
   ansible.builtin.copy:
-    src: zshrc.local
-    dest: /home/jonny/.zshrc.local
+    src: "{{ item }}"
+    dest: /home/jonny/.{{ item }}
     owner: jonny
     group: jonny
+  with_items:
+    - zshrc.local
+    - gitconfig
