--- a/roles/heimdall/tasks/main.yml
+++ b/roles/heimdall/tasks/main.yml
@@ -14,6 +14,7 @@
   community.docker.docker_container:
     name: heimdall
     image: ghcr.io/linuxserver/heimdall:version-2.2.2
+    pull: true
     state: started
     restart_policy: unless-stopped
     networks:
