--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -14,6 +14,7 @@
   community.docker.docker_container:
     name: portainer
     image: portainer/portainer-ce:2.1.1
+    pull: true
     state: started
     restart_policy: unless-stopped
     networks:
