--- a/roles/radarr/tasks/main.yml
+++ b/roles/radarr/tasks/main.yml
@@ -14,6 +14,7 @@
   community.docker.docker_container:
     name: radarr
     image: ghcr.io/linuxserver/radarr:version-3.0.2.4552
+    pull: true
     state: started
     restart_policy: unless-stopped
     networks:
