--- a/roles/sonarr/tasks/main.yml
+++ b/roles/sonarr/tasks/main.yml
@@ -14,6 +14,7 @@
   community.docker.docker_container:
     name: sonarr
     image: ghcr.io/linuxserver/sonarr:version-3.0.6.1196
+    pull: true
     state: started
     restart_policy: unless-stopped
     networks:
