--- a/roles/tautulli/tasks/main.yml
+++ b/roles/tautulli/tasks/main.yml
@@ -14,6 +14,7 @@
   community.docker.docker_container:
     name: tautulli
     image: ghcr.io/linuxserver/tautulli:version-v2.7.0
+    pull: true
     state: started
     restart_policy: unless-stopped
     networks:
