--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -87,6 +87,7 @@
   community.docker.docker_container:
     name: mariadb
     image: mariadb:10.5
+    pull: true
     state: started
     restart_policy: unless-stopped
     networks:
@@ -114,6 +115,7 @@
   community.docker.docker_container:
     name: wordpress
     image: wordpress:5.7.1-fpm-alpine
+    pull: true
     state: started
     restart_policy: unless-stopped
     networks:
@@ -138,6 +140,7 @@
   community.docker.docker_container:
     name: nginx
     image: nginx:1.19.10-alpine
+    pull: true
     state: started
     restart_policy: unless-stopped
     networks:
