Add python3-docker to docker external tasks

--- a/roles/docker/tasks/docker-external.yml
+++ b/roles/docker/tasks/docker-external.yml
@@ -13,5 +13,7 @@
 
 - name: Install Docker
   package:
-    name: docker-ce
+    name:
+      - docker-ce
+      - python3-docker
     state: present
