--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -10,3 +10,8 @@
     - 00-allowed-users.conf
     - 10-harden.conf
   notify: restart ssh
+
+- name: Push authorized keys
+  ansible.posix.authorized_key:
+    user: jonny
+    key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGOARhByqvHhJYkOvn+1IlEnKsnn3aqNNFXervuw/Qq+ jonny@pattern-2021-03-10"
