Correct unattended upgrades role name

--- a/playbooks/emmas-edit.yml
+++ b/playbooks/emmas-edit.yml
@@ -6,4 +6,4 @@
     - {role: sshd}
     - {role: docker, vars: {docker_external: true}}
     - {role: wordpress}
-    - {role: unattended-upgrades}
+    - {role: unattended_upgrades}
