Support Python 2 in Docker role

--- a/roles/docker/tasks/docker-external.yml
+++ b/roles/docker/tasks/docker-external.yml
@@ -13,7 +13,5 @@
 
 - name: Install Docker
   package:
-    name:
-      - docker-ce
-      - python3-docker
+    name: docker-ce
     state: present
