Add cloudflared and pihole to pihole playbook

--- a/playbooks/pihole.yml
+++ b/playbooks/pihole.yml
@@ -4,5 +4,7 @@
   roles:
     - {role: common}
     - {role: sshd}
-    - {role: docker}
+    - {role: docker, vars: {docker_external: true, docker_arch: armhf}}
     - {role: unattended_upgrades}
+    - {role: cloudflared}
+    - {role: pi_hole}
