--- a/renovate.json
+++ b/renovate.json
@@ -39,7 +39,7 @@
         "ghcr.io/linuxserver/radarr",
         "ghcr.io/linuxserver/sonarr"
       ],
-      "versionScheme": "regex:^version-(?<major>\\d+).0.(?<minor>\\d+).(?<patch>\\d+)?$"
+      "versionScheme": "regex:^version-3.(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
       "matchPackageNames": ["ghcr.io/linuxserver/heimdall"],
