--- a/renovate.json
+++ b/renovate.json
@@ -36,7 +36,6 @@
     },
     {
       "matchPackageNames": [
-        "ghcr.io/linuxserver/radarr",
         "ghcr.io/linuxserver/sonarr"
       ],
       "versionScheme": "regex:^version-(?<major>\\d+).0.(?<minor>\\d+).(?<patch>\\d+)?$"
@@ -46,7 +45,10 @@
       "versionScheme": "regex:^version-(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
-      "matchPackageNames": ["ghcr.io/linuxserver/plex"],
+      "matchPackageNames": [
+        "ghcr.io/linuxserver/plex",
+        "ghcr.io/linuxserver/radarr"
+      ],
       "versioning": "loose"
     },
     {
