--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
   ],
 
   "timezone": "Europe/London",
+  "dependencyDashboard": true,
   "separateMinorPatch": true,
   "commitMessageExtra": "to {{#if isMajor}}{{{newMajor}}}{{else}}{{#if isSingleVersion}}{{{newVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
 
