--- a/renovate.json
+++ b/renovate.json
@@ -47,13 +47,16 @@
       "versionScheme": "regex:^version-(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     },
     {
-      "matchPackageNames": ["ghcr.io/linuxserver/plex"],
+      "matchPackageNames": [
+        "ghcr.io/linuxserver/plex"
+      ],
       "versioning": "loose"
     },
     {
-      "matchPackageNames": ["ghcr.io/linuxserver/lidarr"],
-      "allowedVersions": "<=0.7",
-      "versionScheme": "regex:^version-0.(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
+      "matchPackageNames": [
+        "ghcr.io/linuxserver/lidarr"
+      ],
+      "versioning": "semver"
     }
   ]
 }
