--- a/renovate.json
+++ b/renovate.json
@@ -30,6 +30,12 @@
     },
     {
       "matchPackageNames": [
+        "mariadb"
+      ],
+      "allowedVersions": "< 10.6"
+    },
+    {
+      "matchPackageNames": [
         "ghcr.io/linuxserver/jackett",
         "ghcr.io/linuxserver/tautulli"
       ],
