Revert Lidarr versioning

--- a/renovate.json
+++ b/renovate.json
@@ -59,10 +59,8 @@
       "versioning": "loose"
     },
     {
-      "matchPackageNames": [
-        "ghcr.io/linuxserver/lidarr"
-      ],
-      "versioning": "semver"
+      "matchPackageNames": ["ghcr.io/linuxserver/lidarr"],
+      "versionScheme": "regex:^version-0.(?<major>\\d+).(?<minor>\\d+).(?<patch>\\d+)?$"
     }
   ]
 }
