--- a/roles/lidarr/tasks/main.yml
+++ b/roles/lidarr/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: Start Lidarr container
   community.docker.docker_container:
     name: lidarr
-    image: ghcr.io/linuxserver/lidarr:version-0.8.1.2135
+    image: ghcr.io/linuxserver/lidarr:latest@sha256:f9f202d5e895ed040256b9db9357189ae4c71f03eb1013ff7d3d0627f09fe9cf
     pull: true
     state: started
     restart_policy: unless-stopped
