--- a/roles/sonarr/tasks/main.yml
+++ b/roles/sonarr/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: Start Sonarr container
   community.docker.docker_container:
     name: sonarr
-    image: ghcr.io/linuxserver/sonarr:version-3.0.6.1196
+    image: ghcr.io/linuxserver/sonarr:latest@sha256:22fc4f01b694abd2822078f844736f784efa68a693ffffc371d55ddf85759321
     pull: true
     state: started
     restart_policy: unless-stopped
