--- a/roles/sonarr/tasks/main.yml
+++ b/roles/sonarr/tasks/main.yml
@@ -21,7 +21,7 @@
       - name: "{{ traefik_network_name }}"
     volumes:
       - "{{ container_config_folder }}/sonarr:/config"
-      - "{{ media_path }}/movies:/storage/media/tv"
+      - "{{ media_path }}/tv:/storage/media/tv"
       - "{{ downloads_path }}:/storage/downloads"
     labels:
       traefik.http.routers.sonarr.rule: Host(`sonarr.{{ inventory_hostname }}`)
