--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -3,8 +3,8 @@
   apt:
     state: latest
     upgrade: dist
-    autoclean: yes
-    autoremove: yes
+    autoclean: true
+    autoremove: true
   register: apt_action
   retries: 100
   until: apt_action is success or ('Failed to lock apt for exclusive operation' not in apt_action.msg and '/var/lib/dpkg/lock' not in apt_action.msg)
