Fixes for schedule ansible role

--- a/roles/schedule_ansible/files/regular-ansible.service
+++ b/roles/schedule_ansible/files/regular-ansible.service
@@ -3,6 +3,7 @@ Description=Scheduled Ansible
 
 [Service]
 Type=oneshot
+User=jonny
 Restart=on-failure
 RestartSec=5m
 ExecStart=/usr/local/bin/regular-ansible.sh
