--- a/roles/sshd/tasks/main.yml
+++ b/roles/sshd/tasks/main.yml
@@ -21,14 +21,10 @@
   ansible.posix.authorized_key:
     user: jonny
     key: "{{ item }}"
-  with_items:
-    - "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGOARhByqvHhJYkOvn+1IlEnKsnn3aqNNFXervuw/Qq+ jonny@pattern-2021-03-10"
-    - "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBg5CqPYJjy7SVnvEunrCZv7GrJ/lMih70d4onyTkdMP jonny@ciri-2019-02-12"
+  with_items: "{{ ssh_keys }}"
 
 - name: Push ansible authorized keys
   ansible.posix.authorized_key:
     user: ansible
     key: "{{ item }}"
-  with_items:
-    - "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGOARhByqvHhJYkOvn+1IlEnKsnn3aqNNFXervuw/Qq+ jonny@pattern-2021-03-10"
-    - "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBg5CqPYJjy7SVnvEunrCZv7GrJ/lMih70d4onyTkdMP jonny@ciri-2019-02-12"
+  with_items: "{{ ssh_keys }}"
