--- a/playbooks/regular-run.yml
+++ b/playbooks/regular-run.yml
@@ -1,5 +1,5 @@
 ---
-- import_playbook: update.yml
+- import_playbook: maintenance.yml
 - import_playbook: server.yml
 - import_playbook: pihole.yml
 - import_playbook: emmas-edit.yml
